TODO: FAQ: common pitfalls? invoke-before-return
TODO: FAQ: scope-ids? hosts file order?
TODO: AnyEvent::Handle with AnyEvent::IO?
TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
TODO: maybe implement env variable to give hosts precedence

TODO: newer openssl versions don't like 0-byte writes, work around
TODO: mention AnyEvent::fork etc.
TODO: mention AnyEvent::Impl::IOAsync::set_loop (also implement get_loop).
TODO: From: Maxime Soulé <btik-cpan@scoubidou.com>    verify_peername => [ 2, 0, 0 ]
	- added cbor read and write types to AnyEvent::Handle (using CBOR::XS).
        - calling AnyEvent->now_update with AnyEvent::Impl::Perl caused an
          endless loop (reported by Dietrich Rebmann).
        - add tlsv1_1 and tlsv1_2 protocols to AnyEvent::TLS
          (patch by Maxime Soulé).
	- force a toplevel domain name in t/81_hosts.t (analyzed by
          David Jack Wange Olrik).
        - document that AnyEvent::Log uses AnyEvent::IO.
        - time for an =encoding directive.

7.05 Wed Aug 21 10:38:08 CEST 2013
	- uts46data.pl couldn't be found due to wrong naming of the file
          (reported by Fulko Hew).
        - handle lone \015's properly in AE::Handle's default line read
          (reported by various people).
        - untaint ip addresses found in /etc/hosts (patch by José Micó).
        - the memleak fix in 7.03 caused resolving via /etc/hosts to always
          fail on first use (reported and testcase by Andrew Whatson).
        - expose AnyEvent::Log::format_time, and allow users to redefine it.
        - expose AnyEvent::Log::default_format, and allow redefinition.
        - expose AnyEvent::Log::fatal_exit, to allow redefinition.
	- AnyEvent::Debug shell can now run coro shell commands, if available.
	- t/63* tests were wrongly in MANIFEST.
        - kernel.org's finger server went MIA, switch to freebsd.org and
          icculus.org.